deposited status by buyers to sellers
