# main.go
@@ -37,6 +37,7 @@ func main() {
 	api.HandleFunc("/transactions", transactions.CreateTransactionHandler).Methods("POST")
 	api.HandleFunc("/transactions", transactions.GetTransactionsHandler).Methods("GET")
 	api.HandleFunc("/transactions/{id}", transactions.GetTransactionHandler).Methods("GET")
+	api.HandleFunc("/transactions/{id}/fulfill", transactions.FulfillTransactionHandler).Methods("PUT")
 
 	// Setup CORS
 	c := cors.New(cors.Options{
